--- a/src/Pages/SearchPage.css
+++ b/src/Pages/SearchPage.css
@@ -1,5 +1,44 @@
+.searchPage_header{
+    display: flex;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 100;
+    align-items: flex-start;
+    padding-left: 30px;
+    border-bottom: 1px solid lightgray;
+}
 .searchPage_logo{
     object-fit: contain;
     height: 50px;
     margin-right: 50px;
+}
+.searchPage_headerBody > .search > .search_input{
+    margin-top: 0;
+    width: unset;
+    margin: unset;
+    max-width: unset;
+}
+.searchPage_options{
+    display: flex;
+    align-items: center;
+    color: grey;
+}
+.searchPage_options a,
+.searchPage_optionsRight a{
+    text-decoration: none;
+    color: gray;
+
+}
+.searchPage_optionsRight,
+.searchPage_optionsLeft{
+    display: flex;
+}
+.searchPage_optionsRight{
+    margin-left: 80px;
+}
+.searchPage_option{
+    display: flex;
+    margin-right: 20px;
+    align-items: center;
 }
