--- a/src/Pages/SearchPage.css
+++ b/src/Pages/SearchPage.css
@@ -5,7 +5,7 @@
     background-color: white;
     z-index: 100;
     align-items: flex-start;
-    padding-left: 30px;
+    padding: 30px;
     border-bottom: 1px solid lightgray;
 }
 .searchPage_logo{
@@ -39,6 +39,44 @@
 }
 .searchPage_option{
     display: flex;
-    margin-right: 20px;
     align-items: center;
+    margin-right: 30px;
+}
+.searchPage_option a{
+    margin-left: 5px;
+}
+.searchPage_optionsRight .searchPage_option a {
+    margin-left: 20px;
+}
+.searchPage_result{
+    margin: 40px 0;
+}
+.searchPage_resultCount{
+    color: #78757a;
+    font-size: 14px;
+
+}
+.searchPage_results{
+    max-width: 650px;
+    margin-top: 60px;
+    margin-left: 240px;
+    margin-bottom: 100px;
+}
+.searchPage_resultImage{
+    object-fit: contain;
+    height: 20px;
+    width: 20px;
+    margin-right: 10px;
+}
+.searchPage_resultTitle{
+    text-decoration: none;
+}
+.searchPage_resultTitle:hover{
+    text-decoration: underline;
+}
+.searchPage_resultTitle > h2{
+    font-weight: 500;
+}
+.searchPage_resultSnippet{
+    margin-top: 10px;
 }
